# ckit

./: .gitignore  CMakeLists.txt  README.md  version.h.in
.github/workflows/: cmake.yml
include/ckit/: base64.h
src/: base64.c
test/: CMakeLists.txt
test/src/: ckit_test.cc
